--- a/스터디/토비의스프링/토비의 스프링.md
+++ b/스터디/토비의스프링/토비의 스프링.md
@@ -1,4 +1,5 @@
-토비의 스프링(이에 대한 스터디는 최대한 어떻게 객체지향을 풀어나가는지에 집중할것!)
+# 토비의 스프링 vol1
+(이에 대한 스터디는 최대한 어떻게 객체지향을 풀어나가는지에 집중할것!)
 - 스프링이란?
   - 어플리케이션 개발을 빠르고 효율적으로 할수있도록 도와주는 애플리케이션 프레임워크
   - 이를 위해 애플리케이션의 기본틀, 공통 프로그래밍 모델, 기술 API를 제공
@@ -227,7 +228,8 @@
     - 예외안에 의미있는 정보들을 넣어주면 좋을듯!
       - 예를들어, 잔고 관련하여 에러가 났다면, 현재 남은 금액이 얼마인지도 에러클래스 내부적으로 담고있다가 전달해주면 좋을듯
 
-- 5장 서비스 추상화
+- 5장 서비스 추상화 (PSA - Portable Service Abstraction)
+  - 추상적인 작업 내용은 유지한 채로 구체적인 구현방법을 자유롭게 바꿀수 있도록하는것!
   - 데이터 엑세스 기술이 변경된다고해서 비지니스로직이 있는 계층(service)이 변경되어서는 안된다!
     - 그래서 dao는 인터페이스로! dao인터페이스도 exception 같은 경우, 데이터 엑세스 기술에 영향받지않도록 RuntimeException을 사용하고, 스프링에서 이미 추상화되어있는 데이터 엑세스 오브젝트를 활용하자!
     - 비지니스로직 또한 내부적으로 책임과 역할에 따라서 깔끔하게 메소드로 정리되어야한다!
@@ -296,3 +298,203 @@
       - 앞으로 변경이 일어나면 무엇이 있을수 있고, 그 변화에 쉽게 대응할수잇도록 작성이 되어있는지
     - 도메인 클래스에 비지니스 로직이 들어가면 테스트소스만들어라! 
     - 비지니스 로직 처리시 중간에 에러를 일부러 내야한다면, 그런 에러를 낼수있는 서비스 클래스를 새로 만들어라!(되도록이면 테스트 클래스 내부에서!)
+
+- 6장 AOP
+  - 핵심기능(타겟)같은 경우는 독립적으로 존재 가능하며 그렇기에 테스트도 가능하다. 그러나, 부가기능(ex. 트랜잭션)같은 경우는 핵심기능에 종속되어있을수 밖에 없다. 그로인해 독립적으로 테스트가 어렵고, 코드상에도 명확하게 분리가 어렵다. 이를 해결하기위해 AOP라는 개념이 생기게 되었으며, 이는 부가기능을 하나의 관점으로 따로 떼어 볼수 있도록 해주어서 부가기능만을 집중해서 개발하고 테스트 가능하게 되었다. 즉, 관점지향프로그래밍인 AOP는 OOP를 도와줄수있는 존재이며, 이를 따로 떼어서 설명할수 없다
+  - 트랜잭션의 사용이 AOP로 발전되는 순서 (p500~ 간단하게 설명굿)
+    - 프록시(데코레이터 패턴)를 사용하여 비지니스 로직과 트랜잭션 로직을 분리
+      - 프록시 오브젝트는 기존 비지니스로직(타겟)을 DI받아 트랜잭션에 필요한 작업을 구현하고 타겟을 호출
+      - 부가기능은 마치 자신이 핵심 기능을 가진 클래스인것처럼 꾸며서(핵심기능의 인터페이스를 동일하게 구현), 클라이언트가 자신을 거쳐서 핵심기능을 사용하도록 만들어야함
+      - 트랜잭션 기능을 부여하지않아도 되는 메소드 조차 프록시로서 위임기능이 필요하기때문에 일일이 다 구현을 해줘야함..
+    - 다이나믹프록시를 활용한 트랜잭션 전용 bean을 생성
+      - 다이나믹 프록시를 확장하여 지정한 특정 메소드만 사용할수 있도록 해줄수있음
+        - InvocationHandler에 데코레이터 패턴을 적용하여 pointcut과 유사하게 적용할수있음(패턴을 받으면됨)
+      - 하지만, 이는 트랜잭션을 적용할 타겟이 생길때마다 설정에서 추가로 셋팅을 해주어야함.. 중복!
+      - 트랜잭션뿐 아니라 다른 부가기능을 추가해야할때마다 설정 변경 및 추가필요
+      - ~~invocationHandler의 재사용이 어려움.. 새로운 타깃이 있으면 새로 만들어야..?~~ 이건 약간 어떻게 만드느냐에따라 다를듯..
+      - *JDK의 다이나믹 프록시는 특정 인터페이스를 구현한 오브젝트에 대해서 프록시 역할을 해주는 클래스를 런타임시 내부적으로 만들어준다. 런타임시에 만들어지기때문에 클래스 소스가 따로 남지 않을뿐이지 타깃 인터페이스의 모든 메소드를 구현하는 클래스가 분명히 만들어진다..
+    - ProxyFactoryBean
+      - 서비스 추상화를 프록시 기술에도 적용
+      - 다이나믹프록시에서 사용하는 invocationHandler는 Proxy 사용을 위해 타겟을 직접 넣어주며 타겟의 기능을 직접 실행시켜주어야하는데, MethodInterceptorsms 추상화가 되어있어서 MethodInvocation.proceed()만 호출하는 타깃을 실행시킨다. 그렇기 때문에 부가기능에 집중할수 있다. (MethodInvocation에는 타깃오브젝트에대한 정보가 담겨져있다)
+      - 작은 단위의 템플릿/콜백 구조를 응용해서 적용했기때문에 템플릿 역할을 하는 MethodInvocation을 싱글톤으로 두고 공유가능
+      - 내부적으로 java의 다이내믹프록시를 사용함!
+      - 다이나믹 프록시를 생성할때, Pointcut을 사용하여 적용해야할 대상인지를 구분하고, 적용해야할 부가기능이 정의된 advice를 invocation콜백에 적용하여 타깃을 감싼다(프록시 적용)
+      - Advice, Advisor 모두 공유가 가능하지만, 결국 타깃이 생길떄마다 설정에 ProxyFactoryBean 설정을 동일하게 해주어야함(중복)
+    - DefaultAdvisorAuitoProxyCreator
+      - bean 후처리기를 이용한 자동 프록시 생성기
+        - BeanPostProcessor를 구현
+        - bean 후처리기란 이름 그대로 스프링 빈 오브젝트로 만들어지고 난 후에, 빈 오브젝트를 다시 가공할 수 있게 해준것(후처리!)
+      - bean으로 등록된 모든 advisor 내의 pointcut을 이용해 생성된 bean이 프록시 적용대상인지를 확인하고, 적용대상이면, 내장된 프록시 생성기에게 현재 bean에 대한 프록시를 만들게하고 만들어진 프록시에 어드바이저를 연결해준다. 또한 후처리기는 프록시가 생성되면 원래 컨테이너가 전달해준 빈 오브젝트 대신 프록시 오브젝트를 컨터이너에게 돌려줌
+      - 등록된 "어드바이저"를 알아서 찾아서 읽고 적용한다!!!
+      - 여기서 좀더 나아가 스프링은 간단하고 효과적인 방법으로 포인트컷의 클래스와 메소드를 선정하는 알고리즘을 작성할수 있는 방법인 "포인트컷 표현식"을 제공
+        - AspectJExpressionPointcut 클래스 사용
+        - 이를 사용해 클래스와 메소드의 선정 알고리즘을 한번에 지정가능
+        - 포인트컷 표현식 문법(메소드의 풀 시그니처를 문자열로 비교하는개념)
+          - *메소드의 풀 시그니처란 Target.class.getMethod("methodName",int.class,int.class) 를 찍어보면 확인가능
+          - ex. public int com.test.Target.methodName(int,int) throws java.lang.RuntimeException
+  ```java
+    execution([접근 제한자 패턴] 타입패턴 [타입패턴.]이름패턴 (타입패턴|"..",...))
+    //타입패턴 : 클래스 이름이 아닌, 오브젝트의 타입! ex. 인터페이스, 슈퍼클래스
+    //자세한것은 토비스프링vol1 p491~ 참고
+  ```
+  - 프록시(대리자, 위임자) : 클라이언트와 사용대상사이에 대리역할을 맡은 오브젝트를 총칭
+    - 데코레이터 패턴
+      - 부가적인 기능을 부여해주기위해
+      - 타겟의 소스변경x, 클라이언트 소스 변경x, 기능추가 o
+      - 
+    - 프록시 패턴               
+      - 클라이언트가 타깃에 접근하는 방법을 제어하기위함 (그냥 프록시와 프록시 패턴은 다르다)
+      - 타깃의 기능 확장에 관여 x
+      - 예시
+        - 프록시를 통해 생성을 늦추는것
+        - 원격 오브젝트를 이용하는것 (ex. RMI)
+          - 원격에 있는 오브젝트를 클라이언트는 마치 로컬에 존재하는 오브젝트를 쓰는것처럼 프록시 사용가능
+        - 
+  - AOP 적용기술
+    - 스프링 AOP
+      - 프록시 사용
+    - AspectJ
+      - 클래스로딩시 바이트 코드 조작
+      - 컴파일된 타겟의 클래스파일 자체를 수정
+      - 그럼 이를 왜쓰나?
+        - 스프링 컨테이너를 사용하지않기때문에 이를 사용하지않는 환경에서돟 손쉽게 AOP 적용가능
+        - 프록시 사용에 따른 제약으로 부터 자유로움
+          - 프록시는 메소드로만 제한(private은 또 안됨)
+          - AspectJ는 스태틱 메소드 호출이나 초기화, 심지어 필드 입출력 등에 부가기능을 부여할 수 있음
+        - 근데, 사용이 조금 어려운게 단점!
+  - AOP 관련 용어정리
+    - target(타깃) : 부가기능 부여할 대상. 핵심기능 담은 클래스 or 부가기능 담은 프록시 오브젝트가 타깃이 될수있음
+    - join point : 어드바이스가 적용될수 있는 위치. 타깃 오브젝트가 구현한 인터페이스의 모든 메소드는 조인포인트가 됨
+    - proxy : 클라이언트와 타깃 사이에 투명하게 존재. 부가기능을 제공. 스프링은 프록시를 통해 AOP를 지원
+    - Advice : 타깃 오브젝트에 적용하는 부가기능을 담은 오브젝트. 타깃 오브젝트에 종속되지않는다! 순수한 부가기능!(ex. MethodInterceptor를 구현한 오브젝트)
+    - Pointcut : 메소드 선정 알고리즘을 담은 오브젝트! => 적용 클래스 맞는지(클래스필터), 메소드 맞는지(메소드매처)
+      - 어드바이스 적용할 조인포인트를 선별하는 작업 또는 기능을 정의한 모듈
+    - Advisor : Pointcut + Advice. 즉, 어떤 부가기능(advice)을 어디에 전달(pointcut)할 것인지를 알고 있는 모듈
+    - Aspect : application을 구성하는 중요한 한가지 요소. 핵심기능에 부가되어 의미를 갖는 특별한 모듈. Advisor는 단순한 형태의 Aspect!
+    - AOP : 관점 지향 프로그래밍. 핵심기능과 부가기능을 분리함으로써 부가기능을 하나의 관점에서 바라볼수 있도록 프로그래밍 하는것. 이를 통해서 부가기능에만 또한 집중할수있다(개발,설계시) 그래서 AOP는 OOP와 대비되는 개념이 아니라, OOP를 돕는 보조적인 기술.
+
+  - 트랜잭션 좀더 알아보기
+    - 트랜잭션 속성
+      - 트랜잭션 전파(propagation) : 트랜잭션의 경계에서 이미 진행 중인 트랜잭션이 있을때 또는 없을때 어떻게 동작할 것인가를 결정하는 방식. 예를들어, 트랜잭션 전파가 REQUEIRED(기본값)으로 되어있다면, 트랜잭션을 이미 시작한 A서비스에서 DB에 접근하는 다른 B서비스(트랜잭션이 적용되어있는 서비스) 를 호출하였을 경우, 이미 시작한 트랜잭션이 있기때문에 새로운 트랜잭션을 만들지 않음. 즉, B서비스에서 에러나면 A서비스에서 이미 진행되었던 작업또한 롤백이 이루어짐
+        - PROPAGATIOIN_REQUIRED : 이미 시작된 트랜잭션이 있으면 참여
+        - PROPAGATIOIN_REQUIRED_NEW : 앞에 시작된 트랜잭션이 있던지 상관없이 새로운 트랜잭션 시작
+        - PROPAGATIOIN_NOT_SUPPORTED : 트랜잭션 적용무시
+        - 이에 대한 설정을 기반으로 트랜잭션 메니저의 getTransaction()호출시 새로운 트랜잭션을 만들지 말지를 결정
+      - 격리수준
+      - 제한시간
+        - 트랜잭션 수행하는데 제한시간을 걸수 있음
+        - 기본값을 제한시간없음
+      - 읽기전용
+        - read only로 셋팅하면, 트랜잭션 내에서 데이터 조작하는시도를 막을수있음
+    - 트랜잭션 사용시 트랜잭션 속성도 함께 프로퍼티로 셋팅가능한 TransactionInterceptor라는 트랜잭션 전용 advice가 있는데 런타임예외가 발생하면 트랜잭션은 롤백되지만, 체크예외를 던지는 경우에는 커밋이 된다(체크예외는 잡지않는다!)
+    - ***타깃 오브젝트가 자기자신의 메소드 호출할때는 프록시를 통한 부가기능 적용x => 이를 해결하기 위해서는 AspectJ..***
+    - @Transactional
+      - 스프링부트는 이거쓰면끝.. 함수또는 클래스에..
+      - 인터페이스에도 사용가능하나, 되도록 타깃 클래스에서 적용할것!
+  - 6장을 통한 기타 팁
+    - 특정 서비스 자체를 테스트하고싶다면, 이와 연관되어있는 오브젝트(ex. DAO)와는 고립을 시켜주는게 좋음
+      - 특정 service 테스트시 리턴해주는 값도 없다면 내부에 의존되어있는 오브젝트의 메소드를 호출했는지, 호출했으면 몇번이나 했는지 등에 대한 확인이 필요! 이를 위해 목 오브젝트 사용 (Mockito 사용할것!)
+      - DAO와 같이 DB를 연결하고 하는 작업들을 MOCK으로 사용하게되면, 테스트에대한 부담도 줄고 시간도 절약할수있다!(커넥션이나 기타 다른 작업을 생략하니 훨씬 빨라짐!)
+    - 단위 테스트와 통합테스트 (토비스프링에서 아래와같이 정의해서 부른다고 하겠다하지만 통용되는듯함)
+      - 단위테스트 : 테스트 대역을 이용해 의존 오브젝트나 외부의 리소스를 사용하지 않도록 고립시켜서 테스트 하는것
+      - 통합테스트 : 두개 이상의 성격이나 계층이 다른 오브젝트가 연동하도록 만들어 테스트하거나, 외부의 DB나 파일, 서비스 등의 리소스가 참여하는 테스트 
+      - 가이드
+        - 항상 단위테스트 먼저 고려할것
+        - 하나의 클래스나 성경과 목적이 같은 긴밀한 클래스 몇개를 모아서 외부와의 의존관계를 모두 차단하고 필요에 따라 스텁이나 목 오브젝트등의 테스트 대역을 이용하도록 테스트를 만들것
+        - 외부 리소스 사용해야만 가능한 테스트는 통합테스트로 만들것
+        - DAO는 DB연동해서 테스트하는게 좋고, 충분히 검증이 끝나면 대역으로 전환할것! 물론, 나중에 다른 오브젝트와 실제 엮어서 통합테스트도 함께 진행하여야함!
+        - 결국 통합테스트는 반드시 이루어져야함! 하지만 단위 테스트를 충분히 거쳤다면 통합테스트에 대한 부담은 많이 줄수 있음
+        - 단위 테스트를 만들기가 너무 복잡하면 처음부터 통합테스트를 고려해볼것.. 하지만 이때도 최대한 할수있는 단위테스트는 마치고 진행하는게 좋음!
+        - 스프링 테스트 컨텍스트 프레임워크를 이용하는 테스트는 통합테스트! 가능하면 스프링의 지원없이 직접 코드레벨의 DI를 사용하면서 단위테스트하는게 좋음!(물론, 다 그렇게 되기는 어려움)
+        - => 테스트를 잘 작성하면서 진행하지않으면 소스 리팩토링에 대한 "용기" 를 잃어버리기 때문에 코드의 품질은 떨어진다!!
+    - 스프링의 빈(bean)은 기본적으로 클래스 이름과 프로퍼티로 정의되고, 스프링은 지정된 클래스 이름을 가지고 리플렉션을 이용해서 해당 클래스의 오브젝트를 만든다
+      - 리플랙션(reflection) 을 사용하면 private 생성자도 만들어주기때문에(reflection은 private 접근규약을 위한가능), 빈으로 등록할때 스태틱메소드로 객체를 생성해서 빈으로 등록해주어야한다!
+    - xml 설정시 Class 타입은 value를 이용해 클래스 또는 인터페이스의 이름을 넣어주면된다. 스프링은 프로퍼티의 타입이 Class인 경우는 value로 설정한 이름을 가진 Class 오브젝트로 자동변환해준다.
+    - 다른 모듈의 DAO접근시에는 해당 DAO모듈을 지는 서비스계층을 거쳐가자!
+    - 테스트 프레임워크에서 @Transactional 사용시 자동으로 rollback된다! 이를 막기위해서는 @Rollback(false)를 함께 선언해준다!
+    - 되도록 통합 테스트할때는 @Transactional을 사용하자
+
+- 7장 스프링 핵심 기술의 응용
+  - 스프링은 빈을 생성하고, DI 진행하고, 해당 빈의 초기화작업이 이루어지는 "후처리기" 가 있다(BeanPostProcessor)
+    - @Transactional, @PostConstruct 도 후처리기에서 등록해주는것
+  - SqlService
+    - 기능
+      - 외부 리소스 읽어오기(SqlReader)
+      - 읽어온 리소스를 잘 보관하고있다가 필요할때 제공(SqlRegistry)
+      - 필요에따라 SQL 수정
+    - 구현
+      - SqlService는 SqlReader에서 데이터를 가져와서 다시 SqlRegistry에 제공하는 번거로움보다, SqlReader에게 SqlRegistry(전략)를 아싸리 넘겨주는게 좋음! //센스!
+  - Resource
+    - 스프링에서 제공해주는 리소스를 접근할수있도록 추상화한 인터페이스
+      - 그냥 자바에서는 URL클래스를 통해서 웹이나 외부의 리소스(like file)에 대한 접근을 할수있었는데, 클래스패스안에 존재하는 리소스나 서블릿 컨텍스트의 리소스를 지정하는 방법이 없었음.. 또한 파일존재여부를 미리 파악할수도 없었음..
+    - applicationContext가 사용할 설정정보 파일을 지정하는 것부터 시작해서 스프링의 거의 모든 API는 외부의 리소스 정보가 필요할때는 항상 이 Resource 추상화를 이용
+    - ResourceLoader
+      - 문자열안에 리소스의 종류(접두어)와 리소스의 위치를 전달하면, 리소스 종류에 맞게를 이용해 Resource 오브젝트를 리턴해줌!
+      - file:, classpath:, http: 등 
+      - Resource는 설정에서 따로 주입받지않는데, applicationContext가 ResourceLoader이기에 주입하는 타입이 Resource 이면 문자열을 적절한 Resource의 구현체로 알아서 셋팅해준다!
+    - Resource는 단지 리소스에 접근할 수 있는 추상화된 핸들러일뿐! Resource 타입의 오브젝트가 만들어졌다고 해도 실제로 리소스가 존재하지 않을 수 있다!
+    - "classpath:"는 루트부터 절대위치를 적어야한다!
+
+  - 내장형DB
+    - 애플리케이션에 내장돼서 애플리케이션과 함께 시작되고 종료되는 DB를 말한다. 
+    - 데이터는 메모리에 저장되기때문에 IO로 인해 발생하는 부하가 적어서 성능이 뛰어남!
+    - EmbeddedDatabase로 추상화!
+      - 스프링 컨테이너가 종료될때 알아서 shutdown 되기때문에 종료코드가 필요없음
+    - 트랜잭션도 된다!
+  - Spring 3.1 DI
+    - 자바언어의 변화와 스프링
+      - 애노테이션의 메타정보활용
+        - 자바코드가 실행목적이 아닌, 코드를 보고 어떻게 동작할지를 결정! 즉, 리플렉션 API를 활용해 어떻게 만들었는지 살펴보고 그에 따라 동작을 하는 기능이 많이 사용되고있다! 메타정보를 데이터로활용! (어노테이션 사용하여..)
+    - 정책과 관례를 이용한 프로그래밍
+      - 미리 정의한 규칙을 따라서 프레임워크가 작업을 수행!
+      - 이런 스타일을 통해서 자바코드로 모든 작업 과정을 직접 표현했을때에 비해서 작성해야할 내용이 크게 줄었음!(즉, 알아서해준다는것)
+      - 코드는 간결해졌으나, 정책을 잘못알고있거나 기억못하면 의도한대로 동작하지않는 코드가 만들어질수있다는 단점이있음..
+    - 빈 스캐닝과 자동와이어링
+      - @Autowired
+      - @Component
+        - 이게 붙어있으면 자동으로 bean으로 등록시켜주는 마커(maker)와 같음
+        - 따로 bean id를 지정해주지않으면 클래스이름의 맨앞을 소문자로 바꿔서 bean id로 등록해줌
+      - @ComponentScan
+        - @Component가 자동으로 bean으로 등록시켜주려면 빈 스캔기능을 사용하겠다는 애노테이션 정의가 필요!
+        - @Component(basePackages="spring.good") 라고 정의할수도잇는데, spring.good 패키지 하위에잇는 모든 클래스를 스캔해준다
+    - 컨텍스트 분리와 @Import
+      - 독립적인 모듈은 context를 따로 빼는것이 좋다! 해당 context를 뺏다면 @Import를 통해서 가져오면된다!(근데 스프링부트를 사용하게되면 @Configuration으로 등록해도 상관없을듯한데..)
+    - 프로파일
+      - 운영과 테스트시에 bean의 타입이나 이름은 같지만 구분해서 등록이 필요한 경우가 있는데, 이때 프로파일을 사용하면좋다
+      - @Profile("prod") 로 지정하면, 활성 프로파일 목록에 "prod"가 등록되어있을때만 동작한다
+        - 활성프로파일이란 스프링컨테이너를 실행할때 추가로 지정해주는속성
+          - @ActiveProfiles("prod") 이런식으로 지정도 가능하며, 부트에서는 application.properties에서 셋팅가능
+    - 프로퍼티 소스
+      - 프로퍼티 파일의 확장자는 보통 .properties이며 내부에 키=값 형태로 프로퍼티를 정의
+      - @PropertySource 어노테이션을 통해서 등록가능하며, 이를 Environment 객체에 저장하게된다
+        - Environment로 가져오면 딱 해당 문자열을 가져옴..
+        - @Value를 통해서도 가져올수있는데, 이를 사용하면 적절한 변환이 됨 (PropertySourcePlaceholderConfigurer 가 static으로 등록되어있어야함)
+    - 빈 설정의 재사용과 @Enable*
+      - 경로셋팅과 같은 설정값에 변경이 필요한부분은 인터페이스로 빼주어 DI 되도록 하면좋다! 그래야 완벽히 독립된 모듈로써 자유롭게 가져다쓰기좋다
+      - @Import로 사용된것들도 좀더 의미있게만들기위해서 @Import를 매타에노테이션으로 놓고 @Enable\*을 정의해서 사용하면좋다. 이를 확장하면 Import에서 필요한 설정값을 @Eanble\*에서 가져오도록 셋팅하여 넘겨줄수도있따!
+  - 7장을 통한 기타 팁
+    - 인터페이스에만 의존하도록 만들어야 구현클래스를 바꾸고 의존 오브젝트를 변경해서 자유롭게 확장하기 좋다!
+    - 성격이 다른 코드가 한데 섞여 있는 클래스라면 먼저 인터페이스를 정의해서 코드를 각 인터페이스별로 분리하는게 좋다. 다른 인터페이스에 속한 기능은 ***인터페이스를 통해 접근***(직접접근x)하게 만들고, 간단히 자기참조 빈으로 의존관계를 만들어 검증한다. 검증을 마쳤으면 아예 클래스를 분리!
+    - 특정 의존 오브젝트가 대부분의 환경에서 거의 디폴트라고 해도 좋을 만큼 기본적으로 사용될 가능성이 있다면, 디폴트 의존관계를 갖는 빈을 만드는것을 고려해볼 필요가있따!
+      - 디폴트 의존관계란 외부에서 DI받지 않는 경우 기본적으로 자동 적용되는 의존관계를 말한다.(그냥 직접 생성해서 DI해줌)
+    - DI는 확장을 위해 필요한것이므로 항상 미래에 일어날 변화를 예상하고 고민해야 적합한 설계가 가능하다. 결국 ***DI는 미래를 프로그래밍하는것!***
+    - DI를 DI 스럽게 만들기 위해서는 오브젝트간에 인터페이스를 통해 느슨하게 연결해야한다. "DI한다! => 인터페이스로 만든다!" 라고 기억하자!
+    - 인터페이스의 분리원칙
+      - 클라이언트의 목적과 용도에 적합한 인터페이스만을 제공하는것!
+      - 이를 통해서, 클라이언트와 오브젝트간에 관계를 명확하게 할수있다!
+      - A오브젝트가 B오브젝트가 필요한데, B오브젝트가 구현한(혹은 타입을 상속한) B1이라는 인터페이스만 필요하다면, B오브젝트 전체를 넘겨주지말고 B1인터페이스로 넘겨주라! 굳이 B1외의 것을 보여줄필요가없잖아!
+    - 새로만든 클래스의 빈이 다른 빈 오브젝트와 함께 사용될때 문제없는지 확인을 위해서 통합테스트하는것을 잊지말것!
+    - @Bean 등록시 주의사항..
+      - 메소드의 리턴값의 타입은 주입받아 사용하는 타입으로! 예를들어, DataSource(인터페이스)로 주입받는다면, return 타입도 DataSource(인터페이스)로!
+      - @Bean 메소드 안에 로컬변수의 타입은 필요한 생성한 오브젝트 타입을 그대로쓰면댐! 인터페이스로 추상화하면 해당 객체의 세부 기능을 사용못하니깐!(어차피 bean 셋팅할때 한번만쓰게되니깐 문제없고, 제대로 등록하려면 당연히 그렇게해야겟지..)
+    - @Configuration 안에서 다른 설정정보 필요하면 내부적으로 @Autowired로 주입받아서 해당 설정 객체의 데이터를 가져오면된다!
+    - @Resource는 필드이름기준으로 bean을 찾는다. @Autowired는 필드타입기준.. 없으면 이름이 일치하는지
+    - @Enable 로 시작하는 애노테이션들은 관례적인것들을 사용하기 쉽도록 만들어놓은것이다!
+      - 즉 @EnableTransactionManagement 을 선언하면 <tx:annotation-driven />을 선언한것과 같다
+      - 아래의것들을 생성하고 적절히 DI해준것
+        - InfrastructureAdvisorAutoProxyCreator
+        - AnnotationTransactionAttributeSource
+        - TransactionInterceptor
+        - BeanFactoryTransactionAttribtteSoruceAdisor
+    - 단지 주입받는게 아닌, 다른 작업이 필요하면(like 주입받는 오브젝트로 새로운 오브젝트를 생성하는..) 수정자 메소드에 @Autowired 선언해서 만들어주면댐
+    - 설정정보가 아주 많으면 분리해주는것이 좋으나, 그렇지않으면 하나로 관리하는것이 좋음. 그렇다고 구분없이 하나에다가 다 때려받는것이아니라, 스태틱 중첩 클래스를 활용할것!(스태틱 중첩클래스위에 @Configuration 하나 붙여주면끝)
