--- a/스터디/토비의스프링/토비의 스프링.md
+++ b/스터디/토비의스프링/토비의 스프링.md
@@ -567,3 +567,73 @@
   - 정리
     - 엔터프라이즈 서비스를 개발하는데 있어서, 기술적 복잡함과 비지니스로직의 복잡함을 분리하여 POJO 방식(객체지향 추구, 기술과 환경에 종속x)으로 비지니스로직에 집중할 수 있도록 도와주는것이 스프링! 이를 가능하도록 기술적으로 도와주는것이 IoC/DI, AOP, PSA 이다   
     이를 통해 애플리케이션 개발의 모든 기술과 영역을 종합적으로 다루는 애플리케이션 프레임워크를 실현!
+
+- 9장 스프링 프로젝트 시작하기
+  - 스프링의 주요기능은 웹브라우저를 클라이언트로하고 DB에 데이터를 저장, 조회하는데 집중되어있음
+  - 스프링으로 만든 애플리케이션을 자바 서버환경에 배포하려면 JavaEE 서버가 필요
+    - JavaEE 표준을 따르는 애플리케이션 서버는 두가지
+      1. 경량급 WAS/서블릿 컨테이너
+        - 보통 스프링은 jetty나 tomcat같은 서블릿 컨테이너 사용
+      2. WAS
+  - 스프링 애플리케이션 배포단위
+    - war : 톰캣과 같은 서블릿 컨테이너 사용할때
+    - ear : 엔터프라이즈 애플리케이션으로 패키징하는것. EJB모듈 관련
+  - 스프링이 지원하는 기술이란
+    1. 해당 기술을 스프링의 DI패턴을 따라 사용가능
+        - 적절한 프로퍼티를 통해서 값을 주입받기도하고 빈으로도 등록가능
+    2. 스프링의 서비스 추상화적용
+        - ***일관된 접근!***
+        - 비슷한 기술들 그러나, 구현은 다 각기 다른 기술들에 대해 일관된 접근을 제공
+    3. 스프링이 지지하는 프로그래밍 모델을 적용
+        - DAO에서 예외들을 하나로 묶어주는것과 같이 특정 기술에 종속x(2번이랑 비슷한듯..)
+    4. 템플릿/콜백 이 지원
+        - JDBC, JMS, JCA 를 비롯한 여러가지기술을 지원하는 템플릿/콜백을 제공
+        - 만약 템플릿/콜백이 없다면 판에 박힌 코드때문에 상당히 지저분해짐
+    - => 기술,환경에 종속되지않는 추상화를 제공해주는게 핵심인듯
+
+
+  - 9장을 통한 기타 팁
+    - 계층형 아키텍처
+      - 책임과 성격이 다른 것을 크게 그룹으로 만들어 분리해 내는것을 아키텍트차원에서 계층형 아키텍처라함
+      - 멀티티어 아키텍처라고도함
+      - 일반적으로 웹은 3개의 계층을 갖는다하여 "3-tier 애플리케이션" 이라함
+        - 3계층 아키텍처
+          - 데이터 엑세스계층 : DB나 레거시 시스템과 연동하는 인터페이스 역할
+            - DB외에 ERP, 레거시시스템, 메인프레임 등에 접근하는 역할을 하기때문에 EIS(Enterprise Information System) 계층이라고도함
+            - 어떤 환경이나 기술에도 영향받지않을수 있도록 추상화가 중요한데, 그로인하여 수직적 계층구조가 나타남
+              - 한 계층내에서 추상화 수준에 따라 수직적으로 계층을 나누었을때를 수직적 계층이라고 함. 상위로 갈수록 더 추상화된것!
+          - 서비스계층 : 비지니스 로직
+            - POJO!
+            - 특별한 경우가 아니라면 굳이 추상화 수직구조를 가질 필요없음! 기술API를 직접 다루지 않으므로!(로직을 모델링하다가 상속구조는 만들수있겠지)
+            - AOP를 잘 활용하여 서비스 계층코드에 트랜잭션과 같은 부가기능의 기술API가 침범하지않도록 해주어야함
+            - 이상적인 서비스계층은 데이터 엑세스 계층이나 프레젠테이션 계층이 바뀌어도 그대로 유지될수 있어야한다!
+          - 프레젠테이션계층 : UI를 만들고 흐름을 관리
+            - HTTP를 처리하는 서블릿을 기반으로 두는 경우가 많음
+      - 계층형 아키텍처 설계원칙
+        - 객체지향 설계원칙이 동일하게 적용해야함. 즉, 각 계층은 응집도가 높으며, 계층간에는 결합도가 낮아야한다!
+        - 서비스 계층에 ResultSet과 같은 데이터엑세스계층 내부에서 해결해야할 클래스가 보여서는 안된다! 이러면 계층간 결합도가 높아진다!(JDBC라는 특정 데이터 엑세스 계층에 종속되는 서비스 계층의 코드가 됨..)
+        - 계층의 경계를 넘어갈때는 반드시 특정 계층에 종속되지않는 오브젝트 형태가 필요!
+        - 계층사이의 호출은 인터페이스!
+          - 인터페이스를 사용하게한다는건 각 계층의 경계를 넘어서 들어오는 요청을 명확히 정의하겠다는것!
+          - 한 계층 내부에서만 사용되도록 만든 빈을 다른 계층에서 직접 DI해서 사용하면안된다!
+        - 엔터프라이즈 애플리케이션에 존재하는 정보를 어떻게 다룰것인지에 따라 두가지가 존재
+          - 정보를 단순히 데이터로 다루는경우
+            - 계층사이에 결합도가 높고, 각 계층의 응집도는 낮음. 
+            - 화면을 중심으로 하는 업무 트랜잭션 단위로 코드가 모이기때문에 처음엔 개발하기 쉬우나, 중복많고 객체지향사용 어려움(변화에 취약)
+          - 정보를 오브젝트로 다루는 경우
+            - 도메인 모델을 반영하는 오브젝트 구조를 만들어두고, 그것을 각 계층사이에서 정보를 전송하는데 사용하는것
+            - 애플리케이션 전 계층에서 동일한 의미를 가짐. 그래서 전 계층에서 일관된 구조를 유지한 채로 사용가능.
+            - ***도메인 오브젝트를 사용하는 아키텍처는 ORM과 같은 데이터 엑세스 기술을 사용하는걸 권장..***
+            - 비지니스 로직도 담을수있음
+              - ***특정 도메인 오브젝트에 종속되는*** 비지니스 로직을 도메인오브젝트에 넣음
+              - "풍성한 도메인 오브젝트방식"이라고도함
+              - 객체지향적 특성을 살리고, 응집도가 매우 높아짐!
+              - 이에 한걸음 더 나아간것이 아예 도메인오브젝트들이 서비스 계층과 데이터 액세스 계층사이에 존재하게하여 독립적인 계층으로 두는것(도메인계층)
+                - 도메인에 종속되는 비지니스 로직의 처리는 도메인 계층의 오브젝트 안에서 진행(서비스 계층의 도움은 필요없다!)
+                - 도메인 오브젝트가 기존 데이터 액세스 계층이나 기반계층의 기능을 직접 활용. 이를 위해 AspectJ AOP를 사용해야함
+                  - 도메인 오브젝트를 만드는것은 스프링컨테이너에 등록하는것이 아니라, 요청에 따라 임시적으로 new 키워드를 통해 잠시 만들었다가 소멸되는데, 이런 상황에서 데이터 엑세스를 사용하기위해서는 어쨌든 DI가 필요하고, 이를 위해서 스프링 AOP가 아닌, AspectJ AOP가 필요하다
+                - *여기서 서비스계층이 필요없는것은 아님! 여러 도메인 오브젝트들의 기능을 조합해서 복잡한 작업을 해야하는 경우도 있고, 트랜잭션같은 기반서비스 이용이 필요한 작업을 위해서는 서비스 계층이 필요!
+                - 매우 복잡하고 변경이 잦은 도메인에는 매우좋은 아키텍처! 복잡한 도메인의 구조와 로직을 최대한 도메인 계층의 오브젝트에 반영하고 도메인 모델과 설계에 변경이 발생했을때 도메인 계층의 오브젝트도 빠르게 대응 가능! 또한 응집도가 매우 높아서 단위테스트하기 매우 수월
+      
+  - HTTP 세션은 서블릿 컨테이너가 제공해줌
+
