--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -325,3 +325,149 @@
       - ORM 사용하면 SQL문장을 직접 작성x
       - 즉, 쉽게 이야기하면 자바 오브젝트와 RDB사이에 ORM 프레임워크가 적절히 맵핑해주어, 데이터를 오브젝트 관점에서 핸들링 할수있는것!
       - @EnableTransactionManager를 통해서 트랜잭션 AOP관련한 인프라 빈들이 등록됨.. 스프링부트에서는 jdbc사용하면 자동으로 등록이되는듯..
+- 3장 스프링 웹 기술과 스프링 MVC
+  - 기본적으로 서비스 계층과 데이터 엑세스 계층을 담은 ***루트에플리케이션 컨텍스트***와 스프링 웹 기술을 기반으로 동작하는 웹 관련 빈을 담은 ***서블릿 에플리케이션 컨텍스트***로 분리된다
+    - 이를 통해서 다른 웹 기술을 사용할때 언제라도 대체가 가능할수있도록 할 수 있다.
+  - 스프링 MVC와 DispatcherServlet 전략
+    - 스프링은 기본적으로 추상화를 기반으로 기술이 바뀐다한들 비지니스 로직이 변경되지않도록 해준다. 스프링 MVC와 DispatcherServlet 또한 이를 기반으로 만들어져있다. 하지만 중요한것은 추상화를 기반으로 프로젝트에 맞는 구체적인 프레임워크를 만들어 나가야한다. RoR과 같은 일체형 고속개발 프레임워크는 기술에 대한 자기주장이 강한데, 스프링 프레임워크 또한 궁극적으로 빠른 개발을 위해서는 추상화를 기반으로 특정 프로젝트에 맞는 최적화된 구조를 만들어내고, 관례를 따라 빠르게 개발 가능한 스프링 기반 프레임워크를 만들어서 사용해야한다!
+    - 스프링 MVC 프레임워크를 이미 완성된 고정적인 프레임워크로 보지말고, 진행하려는 프로젝트의 특성에 맞게 빠르고 편리한 개발이 가능하도록 자신만의 웹 프레임워크를 만드는데 쓸 수 있는 도구라고 생각할 필요가 있다! 
+    - DispatcherServlet과 MVC 아키텍처
+      - MVC 
+        - M(model) : 프레젠테이션 계층의 구성요소 정보를 담은 모델
+        - V(view) : 화면 출력 로직을 담은 뷰
+        - C(Controller) : 제어 로직을 담은 컨트롤러
+      - MVC 아키텍처는 프론트 컨트롤러 패턴과 함께사용
+        - 프론트 컨트롤러 패턴 : 중앙 집중형 컨트롤러를 프레젠테이션 계층의 제일 앞에 둬서 서버로 들어오는 모든 요청을 먼저 받아서 처리(DispatcherServlet이 그 역할을함)
+          1. 공통적인 작업을 먼저수행
+          2. 적절한 세부컨트롤러로 작업 위임
+          3. 클라이언트에게 보낼 뷰 선택해서 최정결과 생성
+          4. 예외가 발생했을때 이를 일관된 방식으로 처리
+          - <img src='dispatcherServlet_architecture.jpeg'>
+          - (1) Http 요청 접수
+            - 지정한 패턴에 맞추어 요청이 들어오면, 해당 DispatcherServlet으로 전달.
+            - 공통적으로 진행해야하는 전처리 작업(보안, 파라미터 조작, 한글인코딩 등)이 있다면 이를 수행
+          - (2) DispatcherServlet에서 컨트롤러로 HTTP 요청 위임
+            - 컨트롤러를 선정하는 ***핸들러 맵핑 전략***을 통해서 어떤 핸들러(컨트롤러)를 선택할지를 결정하고 ***핸들러 어뎁터***를 통해서 해당 컨트롤러를 실제적으로 실행하게된다
+              - 핸들러 어뎁터는 어뎁터 패턴으로 이루어져있는데, 이를 사용하는 이유는 DispatcherServlet이 핸들러(세부컨트롤러)를 호출할때 해당 핸들러의 특정함수까지 알수 없기에 확장성을 고려해서 만들어진것! 즉, DispatcherServlet은 어뎁터를 통해서 세부컨트롤러가 어떻게 생겨먹던 상관없이 호출가능하게된것!
+          - (3) 컨트롤러의 모델 생성과 정보 등록
+            - 모델(비지니스 계층에서 돌려받는 값을 기반으로 생성)을 DispatcherServlet에 전달
+          - (4) 컨트롤러의 결과 리턴 : 모델과 뷰
+            - 기본적으로 ModelAndView 객체를 리턴
+              - 해당 객체 내부적으로는 (3)을 통해 얻은 모델과 어떤 뷰를 사용할것인지가 들어가있다
+              - 여기서 뷰는 바로 뷰 오브젝트를 전달할수도있고, 뷰 리졸버를 통해서 뷰를 만들수있도록 그냥 String 값을 전달할수도있다
+                - DispacherServlet의 전략인 뷰 리졸버가 뷰의 논리적인 이름을 전달받아 뷰 오브젝트를 생성해준다!
+            - 세부 컨트롤러의 역할은 결국 모델을 셋팅하고 해당 모델정보를 어떤 뷰를 통해 보여줄것인지를 결정해주는것!
+          - (5) DispatcherServlet의 뷰 호출과 (6) 모델 참조
+            - 브라우저에 나타낼 HTML을 생성하는것이 일반적인 뷰의 작업
+            - 어떤 뷰를 선택하느냐에 따라 jsp, json, pdf 등의 형식으로 결과를 보여줄수있다. 그리고 해당 내용은 HttpServletResponse 오브젝트에 담기게된다
+          - (7) HTTP 응답 돌려주기
+            - DispatcherServlet은 등록된 후처리기 있으면, 이를 진행하고 전달받은 HttpServletResponse에 담긴 결과를 서블릿 컨테이너에 전달
+            - 서블릿 컨테이너는 HTTP 응답으로 만들어 클라이언트에게 전송
+        - DispatcherServlet의 DI 가능한 전략
+          - HanlderMapping
+            - 어떤 컨트롤러로 갈것인지 결정하는 로직을 담당
+          - HandlerAdapter
+            - Handler Mapping을 통해서 찾은 컨트롤러를 실행시켜주는 역할
+            - 여러 핸들러 매핑을 이용해서 하나의 어댑터를 통해 컨트롤러를 호출하기도하고
+            - 하나의 핸들러 매핑이 여러개의 어댑터를 통해 컨트롤러 호출하기도하고
+            - 핸들러 매핑과 어댑터가 한가지 컨트롤러에만 적용되기도함(DefaultAnnotationHandlerMapping(spring 3.2 이상부터 RequestMappingHandlerMapping) 에 의해 핸들러 결정되고, AnnotationMethodHandlerAdapter(spring 3.2 이상부터 RequestMappingHandlerAdapter)에 의해 핸들러 호출)
+          - HandlerExceptionResolver
+            - 예외가 발생했을때 이를 처리하는 로직을 가진 전략 오브젝트
+          - ViewResolver
+            - 뷰 이름 참고해서(logical view) 적절한 뷰 오브젝트를 찾아주는 로직을 가진 전략 오브젝트
+          - LocaleResolver
+            - 지역정보를 결정
+          - ThemeResolver
+          - RequestToViewNameTranslator
+            - 컨트롤러에서 뷰 이름이나 뷰 오브젝트를 제공해주지 않았을 경우 URL과 같은 요청정보를 참고해서 자동으로 뷰이름을 생성해주는 전략
+          - *DispatcherServlet은 서블릿 컨테이너가 생성하고 관리하는 오브젝트이지, 스프링의 컨텍스트에서 관리하는 빈 오브젝트가 아님..! DispatcherServlet에 바로 DI해줄수는 없지만, DispatcherServlet은 서블릿 웹 애플리케이션 컨텍스트를 가지고있기때문에 이를 가지고 사용하는것임
+          - **DispatcherServlet에 적용할 전략을 선택하고 필요에 따라 확장하거나 다른 방식으로 동작하도록 설정해주는것이 스프링 MVC를 바르게 사용하는 첫걸음!
+  - 컨트롤러(Controller)
+    - 요청정보 추출 + 검증(+예외처리) + 적절한 타입변환(ex. multipart, 오브젝트) + 비지니스로직을 태우기위해 적절한 파싱 + 비지니스 로직의 결과에 따른 뷰 전달(ex. redirect, forward..) + 모델정보셋팅(서비스 결과 전달 or 직접 생성) (+ 상태 세션 저장)
+    - 위의 다양한 책임들이 컨트롤러에 있게되는데, 이를 스프링은 적절하게 분리하였음!
+      - 스프링 부트 default 빈 참고 : https://jwdeveloper.tistory.com/146
+    - 컨트롤러의 종류와 핸들러 어뎁터(DispatcherServlet이 HandlerMapping을 통해서 세부 컨트롤러를 찾으면, 해당 세부컨트롤러를 실행시켜줄 HandlerAdapter를 찾는다)
+      - Servlet과 SimpleServletHandlerAdapter
+        - 표준서블릿 구현한것.. 
+        - DispatcherServlet은 기본적으로 ModelAndView로 진행을하는데, 요놈은 그런게 없어서 직접 response에 다 넣어주어야함..
+      - HttpRequestHandler와 HttpRequestHandlerAdapter
+        - RMI 스타일의 컨트롤러를 이용한 원격호출할때 사용한다함(Exposing services using RMI)
+      - Controller와 SimpleControllerHandlerAdapter
+        - 스프링3.0 에서 어노테이션과 관례를 이용한 컨트롤러 나오기전까지는 이거를 많이 썻다함
+        - 탬플릿 메소드 패턴을 활용하면, 세부 컨트롤러 구현체를 간결하게 해주고, 테스트도 용이!
+          - Map으로 파라미터 전달받고, Model정보를 map에 셋팅해서 넘겨주는 로직들이 이를 통해서 가능!
+      - AnnotationMethodHandlerAdapter(스프링 3.2 이상 RequestMappingHandlerAdapter)
+        - 다른 핸들러 어뎁터와 같은경우에 반드시 특정 인터페이스를 구현한 컨트롤러만을 지원하는데, 이는 지원하는 컨트롤러의 타입이 정해져 있지 않음!
+        - 대신 클래스와 메소드에 애노테이션의 정보와 메소드이름, 파리미터, 리턴타입에 대한 "규칙" 등을 종합적으로 분석해서 컨트롤러를 선별하고 호출방식을 결정!
+        - URL의 매핑을 컨트롤러 단위가 아니라, 메소드 단위로 가능하게했음!
+        - DefaultAnnotationHandlerMapping(스프링3.2 이상 RequestMappingHandlerMapping) 핸들러 매핑과 함께 사용됨
+        - 규칙과 관례를 잘 기억해야함!
+    - 핸들러 매핑
+      - HTTP 요청 정보를 이용해서 세부 컨트롤러를 찾아주는 기능을 가진 DispatcherServlet의 전략
+      - 컨트롤러의 타입과는 전혀 상관없음
+        - 즉, 하나의 핸들러 매핑전략이 여러가지 타입의 컨트롤러를 선택가능하다는뜻
+      - 종류
+        - BeanNameUrlHandlerMapping(디폴트)
+          - 빈의 이름에 들어있는 URL을 HTTP 요청의 URL과 비교해서 일치하는 빈을 찾아줌
+          - 빈 이름에 ant 패턴이라 불리는 *,**,? 사용가능
+            - /abc/s* : /abc/s, /abc/s1, /abc/sssasdf 다 됨
+            - /root/**/sub : /root/sub, /root/a/sub, /root/a/b/c/d/sub 다 됨
+        - ControllerBeanNameHandlerMapping
+          - 빈 이름을 기반으로 찾음. prefix가 있기때문에 prefix와 조합해서 찾음
+        - ControllerClassNameHandlerMapping
+          - 클래스 이름을 기반으로 찾음.
+        - SimpleUrlHandlerMapping
+          - 프로퍼티에 매핑정보를 저장하면 이를 반으로 찾아줌
+        - DefaultAnnotationHandlerMapping(디폴트, 스프링 3.2 이상 RequestMappingHandlerMapping 변경)
+          - @RequestMapping이라는 어노테이션을 컨트롤러 "클래스"나 "메소드"에 직접 부여하고 이를 기반으로 찾아줌
+          - 단지 URL뿐 아니라, GET/POST와 같은 HTTP메소드, 심지어 파라미터와 HTTP 헤더정보까지 매핑에 활용가능
+        - 기타 공통 설정정보
+          - order
+            - 핸들러 매핑은 한개 이상을 동시에 사용할수있기 때문에, 두개 이상 적용했을때 URL 매핑정보가 중복되는 경우를 주의해야함..
+            - 이를 위해 핸들러 매핑의 우선순위를 지정가능
+          - defaultHandler
+            - URL을 매핑할 대상 찾지못하면, 자동으로 디폴트 핸들러를 선택해줌
+            - 맵핑 안되어있을때, 에러 관련해서 일괄처리 가능!
+          - alwaysUseFullPath
+            - URL은 맵핑은 기본적으로 웹 애플리케이션의 컨텍스트 패스와 서블릿 패스 두가지를 제외한 나머지만을 가지고 비교한다
+              - 이렇게 URL 기준을 상대경로만 사용하는 이유는 웹 애플리케이션의 배치 경로와 서블릿 매핑을 변경하더라도 URL 매핑정보가 영향받지 않도록 하기 위해서다. HTML의 링크라면 상대경로를 사용하면 되지만, URL은 절대경로를 사용하므로 바뀌지 않는 부분만 매핑에 이용하는것이 바람직(이해안감..!!!)
+            - 특별한 이유가 있어서 URL 전체를 사용해서 컨트롤러를 매핑하기 원하는 경우가 아니라면 true로 변경하지말것(default가 false)
+          - detectHandlersInAncestorContexts
+            - 컨트롤러는 루트컨텍스트가아니라, 서블릿컨텍스트에 등록되어있어야 찾을수 있는것이 기본값인데, 루트 컨텍스트에서 컨트롤러를 등록해도 찾을수 있도록 변경할수있음.. 그러나 이는 사용하지말것!
+    - 핸들러 인터셉터
+      - DispatcherServlet이 컨트롤러 호출 전,후에 요청과 응답을 참조 or 가공가능하도록 해주는 전략(필터)
+      - 핸들러 맵핑은 DispatcherServlet으로부터 매핑작업 요청받으면 그 결과로 핸들러 실행체인(HandlerExecutionChain)을 돌려주는데, 하나 이상의 핸들러 인터셉터를 거쳐서 컨트롤러가 실행될수있도록 구성되어잇다!(프록시?)
+      - 핸들러 인터셉터 자체가 스프링의 빈이기 때문에 DI를 통해 다른 빈 활용가능
+      - 핸들러매핑클래스에 프로퍼티를 이용해 셋팅함(3.0부터는 URL 패턴을 이용해서 모든 핸들러 매핑에 일괄 적용하는 기능이 추가됐다함)
+      - ***컨트롤러***에 공통적으로 적용할 부가기능이라면 핸들러 인터셉터를 활용하는게좋음!(AOP로 구현하기 어렵고 복잡..)
+      - 종류
+        - HandlerInterceptor
+          - 이 인터페이스를 구현해서만듦
+      ```java
+
+        // 컨트롤러가 호출되기 전에 실행
+        // hanlder 파라미터는 핸들러 매핑이 찾아준 컨트롤러 빈 오브젝트
+        // return이 false라면 작업중단하고 리턴하기떄문에 컨트롤러와 남은 인터셉터 실행 안됨
+        boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception
+
+
+        //컨트롤러 실행하고 난 후 호출
+        void postHandle(HttpServletRequest request, HttpServletResponse response, Object handler, ModelAndView modelAndView) throws Exception
+
+        // 모든 뷰에서 최종 결과를 생성하는 일을 포함한 모든 작업이 다 완료된 후에 실행
+        // HandlerExceptionResolver 에서 에러 맞는 페이지 전달해주고 인터셉터의 afterCompletion에서 세부로그 찍어주거나, 알림을 셋팅하는게 좋음
+        void afterCompletion(HttpServletRequest request, HttpServletResponse response, Object handler, Exception ex) throws Exception
+        
+      ```
+
+  - 3장을 통한 기타 팁
+    - @Autowired 어노테이션 또한 스프링이 확장에 열려있도록 잘 만들었다는 증거! 해당 어노테이션이 붙어있는 곳에 의존관계를 주입하는것은 기존에 만들었던 빈 후처리기를 하나 더 추가한게 전부!
+    - /WEB-INF/아래에 jsp 파일을 두는이유
+      - 실수로라도 JSP 파일을 직접 실행시키지 못하도록 직접 접근이 불가능한 "웹루트/WEB-INF/" 아래에 jsp 파일을 놓아야한다
+      - InternalREsourceView는 "웹루트/WEB-INF/" 접근이 가능하기에 jsp파일을 가져올수있는것!
+    - Spring Util을 잘 활용하자
+      - ClassUtils.classPackageAsResourcePath(clazz) : clazz.class 파일의 경로가져옴
+      - ReflectionTuils.findMethod(클래스,"메소드명",파라미터클래스1,파라미터클래스2...) : Method 가져옴
+      - AnnotationsUtils.getAnnotation(Method, 어노테이션.class) : 어노테이션 가져옴
+    - 프로퍼티를 사용할수 없고, 개별적으로 설정정보(ex. 하나의 클래스(인터페이스) 내에서 특정 메소드)를 지정해야할때 좋은 대안은 애노테이션!
+      - 컨트롤러 입장에서 각 메소드 별로 다른 설정값들을 어노테이션을 활용해 일괄적으로 처리할수있다!(즉, 관례를 사용하여 공통으로 뺄 수 있도록 도와준다!)
