--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -379,7 +379,8 @@
             - 지역정보를 결정
           - ThemeResolver
           - RequestToViewNameTranslator
-            - 컨트롤러에서 뷰 이름이나 뷰 오브젝트를 제공해주지 않았을 경우 URL과 같은 요청정보를 참고해서 자동으로 뷰이름을 생성해주는 전략
+            - 컨트롤러에서 뷰 이름이나 뷰 오브젝트를 제공해주지 않았을 경우(ModelAndView에서 view 빠져잇을때) URL과 같은 요청정보를 참고해서 자동으로 뷰이름을 생성해주는 전략
+            - 이를 기반으로 관례를 잘 사용하면 뷰와 자동으로 매핑시켜줄수있음
           - *DispatcherServlet은 서블릿 컨테이너가 생성하고 관리하는 오브젝트이지, 스프링의 컨텍스트에서 관리하는 빈 오브젝트가 아님..! DispatcherServlet에 바로 DI해줄수는 없지만, DispatcherServlet은 서블릿 웹 애플리케이션 컨텍스트를 가지고있기때문에 이를 가지고 사용하는것임
           - **DispatcherServlet에 적용할 전략을 선택하고 필요에 따라 확장하거나 다른 방식으로 동작하도록 설정해주는것이 스프링 MVC를 바르게 사용하는 첫걸음!
   - 컨트롤러(Controller)
@@ -459,7 +460,150 @@
         void afterCompletion(HttpServletRequest request, HttpServletResponse response, Object handler, Exception ex) throws Exception
         
       ```
+- 뷰
+  - 웹 환경에서는 보통 브라우저에 나타낼수있는 HTML을 만들어주는게 뷰의 역할이다
+  - 컨트롤러가 작업을 마치면 ModelAndView를 넘겨주는데 이때, 두가지 방법이있다
+    - 첫째는 View 타입의 오브젝트를 돌려주는것
+    - 둘째는 뷰 이름을 돌려주는것
+      - 여기서 뷰 리졸버가 사용되어 논리적인 뷰이름을 실질적인 뷰 오브젝트로 전환시켜준다
+  - 뷰의 종류
+    - InternalResourceView
+      - RequestDispatcher의 forward() 나 include()를 사용하는 뷰
+      - /WEB-INF/ 밑으로 접근가능
+      - JSP 뷰를 만든다면, 이를 ModelAndView에 넣으면 JSP로 포워딩해줌
+    - JstlView
+      - InternalResourceView 의 하위클래스
+      - locale(지역정보) 에 따라 달라지는 지역화(localization)된 메세지를 jsp에서 사용 가능
+        - message.propierteis(지역정보가 한국으로 설정되어있다면, message_ko.properties) 파일의 메세지를 JSTL의 fmt에서 사용가능
+    - RedirectView
+      - 실제 뷰가 생성되지않고, URL만 만들어져 다른 페이지로 리다이렉트됨
+      - 모델정보가 있다면, URL 뒤에 파라미터로 추가
+      - "redirect:~~" 이렇게 시작되면 뷰 리졸버가 인식해서 RedirectView로 만들어줌
+    - VelocityView
+    - FreeMarkerView
+    - MarshallingView
+    - AbstractExcelView, AbstractJExcelView, AbstractPdfView
+    - AbstractAtomFeedView, AbstractRssFeedView
+    - XsltView, TilesView, AbstractJasperReportsView
+      - AbstractJasperReportsView는 JasperReport를 이용해 CSV, HTML, PDF, Excel 다 만들수있음
+    - MappingJacksonJsonView
+      - 모든 오브젝트를 json으로 변환
+      - Http 응답의 content type은 application/json으로 지정
+  - 뷰 리졸버
+    - 논리적인 뷰이름을 실질적인 뷰 오브젝트로 전환시켜준다
+    - 보통 뷰 오브젝트를 캐싱하기때문에 뷰가 반복적으로 만들어지지않게 해서 성능면에서도 좋음
+    - 뷰 리졸버를 빈으로 등록하지않으면, DispatcherServlet의 디폴트 뷰 리졸버인 InternalResourceViewResolver가 사용
+    - 뷰 리졸버를 하나 이상을 빈으로 등록해서 사용할수있고, 여러개 사용할때는 order를 사용해서 뷰 리졸버의 순서를 지정하는게 좋음
+      - 순서를 지정했을때 먼저 선택되면 바로 해당 뷰로 리턴
+    - 종류
+      - InternalResourceViewResolver
+        - 되도록이면 default로 사용하지말고, prefix나 suffix를 지정해서 사용할것
+        - 클래스패스에 JTSL 라이브러리가 존재하면 JstlView를 사용하고, 그렇지않으면 InternalResourceView를 사용
+      - ResourceBundleViewResolver
+        - 클래스패스에있는 views.properties 파일을 기반으로 뷰를 매칭
+        - 모든 뷰를 파일에 일일이 정의해야하기때문에, 단독적으로 사용하는것은 비추
+          - InternalResourceViewResolver 와 함께 사용하여 우선순위를 지정해주어, ResourceBundleViewResolver 에서 못찾은놈은 InternalResourceViewResolver 에서 찾게해주도록 하는게 좋음(InternalResourceViewResolver의 order는 Integer.MAX가 기본값.. 상당히 후순위)
+        - 지역화기능 사용가능
+      - XmlViewResolver
+        - /WEB-INF/views.xml에 정의된 대로 뷰를 매칭
+        - 지역화기능 사용못함
+      - BeanNameViewResolver
+        - 빈 이름으로 뷰를 찾아서 매칭
+        - ModelAndView 에는 빈 이름을 전달해주고, 해당 빈 이름으로 등록되어있는 뷰를 사용
+          - 뷰 클래스와 jsp 위치 등 다 셋팅되어있음
+      - ContentNegotiatingViewResolver
+        - 같은 URL이지만 보내는 파라미터에 따라서 다르게 view를 제공해줄수있게함
+        - ContentNegotiatingViewResolver가 뷰를 결정하는 과정
+          1. 미디어 타입 결정
+              - 미디어 타입은 HTTP의 content type 에 대응
+              - 사용자의 요청정보로 사용자가 요청한 미디어 타입정보를 추출하게됨(아래 순서대로)
+                1. URL 확장자를 가지고 결정 
+                2. 포맷 지정하는 파라미터로 미디어 타입을 결정
+                     - "/hello?format=pdf" 라면, pdf 미디어 타입
+                3. Accept 헤더의 설정 이용
+                4. defaultContentType 프로퍼티에 설정해준 디폴트 미디어 타입을 사용(이게 어떻게 사용되는건지..)
+          2. 뷰 리졸버 위임을 통한 후보 뷰 선정
+             - 여러개의 뷰 리졸버를 사용하지만, 우선순위를 무시
+             - 뷰 이름을 처리할수있는 등록된 모든 뷰 리졸버를 통해서 뷰를 돌려받고 이를 모두 최종 뷰 선택을 위한 후보목록에 넣어둠
+             - ContentNegotiatingViewResolver에 사용할 뷰 리졸버 등록해놔야함
+          3. 미디어 타입 비교를 통한 최종 뷰 선정
+             - 요청정보에서 추출한 미디어 타입(1번의 결과)과 뷰 리졸버에서 찾은 뷰 목록(2번위 결과)을 매칭해서 사용할 뷰를 결정
+             - 여기서 ContentNegotiatingViewResolver에 defaultViews 등록한 뷰는 항상 후보목록에 올라가게됨
+          - 예시
+            - ContentNegotiatingViewResolver 셋팅정보
+              - mediaTypes : html / text/html, json / application/json
+              - viewResolvers 
+                - BeanNameViewResolver
+                - InternalResourceViewResolver
+                  - prefix : /WEB-INF/jsp/
+                  - suffix : .jsp
+                - defaultViews
+                  - MappingJacksonView
+            - 위 셋팅정보를 기반으로 /content.html 이라는 URL에서 뷰 찾는과정
+              - URL의 .html을 보고 미디어 타입은 html로 결정된다
+              - ModelAndView에서 content라는 String으로 view name을 return을 했다면, viewResolvers에 등록된것을 바탕으로,  content로 등록되어있는 빈 이름의 뷰를 찾아서 최종 후보에 등록하고, 또한 new JstlView("/WEB-INF/jsp/content.jsp") 도 최종후보에 등록할것이다
+              - 추가로, MappingJacksonView는 defaultViews이기때문에 최종후보 뷰에 등록된다. 결국 총 뷰 후보는 3개
+              - View 인터페이스는 getContentType()를 통해서 각 뷰가 지원하는 콘텐트 타입을 얻을수있는데, JstlView 외에는 콘텐트 타입이 일치하지않으니, 2개는 탈락되고 최종적으로 JstlView가 선정된다
+  - 기타전략
+    - 핸들러 예외 리졸버
+      - 해당 리졸버가 등록되어있다면, DispatcherServlet이 바로 서블릿컨테이너에게 던지지않고, 핸들러 예외리졸버가 처리
+      - 사용자한테 어떻게 보여줄지는 여기서 셋팅하고 자세한 로그나 알림이 필요하다면 인터셉터 핸들러의 afterCompletion을 통해서 하도록!
+      - 종류
+        - AnnotationMethodHandlerExceptionResolver (디폴트)
+          - 예외가 발생한 ***컨트롤러 내*** 의 메소드 중에서 @ExcpetionHandler 붙은 메소드 실행
+          - 넘겨받을수 있는 파라미터들에 관한 여러 관례들이 있으니 찾아볼것!
+        - ResponseStatusExceptionResolver (디폴트)
+          - 예외를 특정 HTTP 응답상태코드로 전환!
+          - 예외클래스에 @ResponseStatus가 있는지 확인해서 있으면, 지정한 HTTP 응답코드를 전달
+          - @ResponseStatus 어노테이션을 적용하기 힘들때는 @ExcpetionHandler을 선언한 메소드의 리턴타입을 void, 파라미터를 HttpServletResponse로 받아서(하나의 관례) setStatus() 메소드에 응답상태와 에러메세지 넣어주면됨
+        - DefaultHandlerExceptionResolver (디폴트)
+          - 스프링 내부 예외를 다룸.
+          - 위 두개가 처리하지못한 에러들.. 신경안써도댐
+        - SimpleMappingExceptionResolver
+          - 에러 클래스와 이에 대응되는 view 이름을 key/value 형식의 프로퍼티로 셋팅
+    - 지역정보 리졸버
+      - 애플리케이션에서 사용하는 지역정보(Locale)를 결정하는 전략
+      - 종류
+        - AcceptHeaderLocaleResolver(디폴트)
+          - HTTP 헤더의 지역정보를 그대로 사용
+        - SessionLocaleResolver, CookieLocaleResolver
+          - 브라우저의 설정을 따르지않고 사용자가 직접 변경하도록해줌
+          - 사용자가 원하는 지역정보를 session이나 cookie에 담아서 전달하면 그것을 기반으로 선택한 지역에 해당하는 메세지나 리소스번들 파일을 사용
+    - 멀티파트 리졸버
+      - 파일 업로드와 같은 멀티파트 포맷의 요청정보를 처리하는 전략을 설정가능
+      - 디폴트 없어서 등록필요
+      - 종류
+        - CommonsMultipartResolver 
+          - 이를 사용하면, HttpSErvletRequest의 확장타입인 MultipartHttpServletRequest 오브젝트로 전환해서, 멀티파트를 디코딩한 내용과 이를 참조하거나 조작할수있는 기능을 제공해준다
+          - 애노테이션 방식의 유연한 컨트롤러 메소드를 이용하면 넘겨받는 파라미터를 바로 MultipartFile 타입의 파라미터로 받거나, 변환기를 ㅣ용해서 아예 바이트 배열이나 파일정보를 담은 오브젝트를 파라미터로 받을수도있다
+  - 스프링3.1의 MVC
+    - 플래시 맵 매니저 전략
+      - Post/Redirect/Get 패턴에서 사용
+        - Post/Redirect/Get 패턴 : POST 방식으로 사용자를 등록하고나면, 브라우저 새로고침시 다시 등록하게되어 등록 요청을 다시 일어나게 하는것을 막기위해 처리후에 Redirect를 통해서 다른 URL을 가진 GET 방식의 새로운 페이지로 이동시키는것이 권자오디는데, 이렇게 구성하는 방법을 말한다
+        - Redirect가 일어나면, HTTP 요청이 바뀌므로 컨트롤러가 모델을 이용해서 다음 요청의 뷰로 정보를 전달시킬수없다. 그래서 리다이렉트하는 URL의 파라미터에 정보를 담거나, HTTP 세션을 이용한다
+        - 그러나 사용자 정보를 저장하고 사용자 목록 페이지로 리다이렉트될때 한번만 메세지를 보여주고, 같은 페이지에서 검색 조건을 바꾸거나 직접 페이지를 갱신해서 동일한 웹 페이지가 다시 로딩되었을때는 한번만 보여주고자 한 메세지라 사라져야한다. 이럴때 세션은 계속 유지되고있으니 사용하기 어려울것이고, 파라미터 또한 계속 가지고 다니게 하기 애매하다. (또한 get방식의 파라미터를 사용하면 URL에 데이터를 노출해야하는 단점도잇음) 이런 상황에서 사용하기 좋은게 플래시 맵!
+      - 플래시 맵 : 플래시 어트리뷰트를 저장하는 맵
+      - 플래시 어트리뷰트 : 하나의 요청에서 생성되어 다음 요청으로 전달되는 정보
+      - 플래시 어트리뷰트는 HTTP 세션보다 정보가 오래 저장되지는 않음
+      - 
+      ```java
 
+      // 1. flashMap 셋팅 (redirect 실행전 controller)
+      FlashgMap fm=RequestContextUtils.getOutputFlashMap(request);
+      fm.put("message", "새로운사용자 등록됐습니다.");
+      fm.setTargetRequestPath("/user/list"); //해당 경로를 호출되었을때만 이를 가져옴
+      fm.startExpirationPeriod(10); // 10초 이상 안가져가면 사라짐.. 요청후 응답받기전에 갑작스레 브라우저 종료하면 맵에서 사라져야하는데 그런경우를 예방해줌
+      RequestContextUtil.getFlashMapMager(request).saveOutputFlashMap(fm, request, response)
+
+      // 2. redirect 실행
+
+      // 3. redirect로 호출된 컨트롤러
+      Map<?, String> fm = RequestContextUtils.getInputFlashMap(request);
+      String message=fm.get("message");
+      model.addAttribute("flashMessage",message);
+      ```
+
+      - 스프링 3.1에서는 플래시 맵 정보를 저장하고 가져오는 방법이 DispatcherSerlvet 전략으로 추가되었음.. 디폴트로 사용되는 전략은 SessionFlashMapManager(Http 세션을 이용하는 플래시 맵 매니저 전략)
   - 3장을 통한 기타 팁
     - @Autowired 어노테이션 또한 스프링이 확장에 열려있도록 잘 만들었다는 증거! 해당 어노테이션이 붙어있는 곳에 의존관계를 주입하는것은 기존에 만들었던 빈 후처리기를 하나 더 추가한게 전부!
     - /WEB-INF/아래에 jsp 파일을 두는이유
@@ -471,3 +615,11 @@
       - AnnotationsUtils.getAnnotation(Method, 어노테이션.class) : 어노테이션 가져옴
     - 프로퍼티를 사용할수 없고, 개별적으로 설정정보(ex. 하나의 클래스(인터페이스) 내에서 특정 메소드)를 지정해야할때 좋은 대안은 애노테이션!
       - 컨트롤러 입장에서 각 메소드 별로 다른 설정값들을 어노테이션을 활용해 일괄적으로 처리할수있다!(즉, 관례를 사용하여 공통으로 뺄 수 있도록 도와준다!)
+    - RESTFul 특징
+      - 같은 리소스에 대해 다양한 타입의 콘텐트를 제공..
+      - 리소스라고 불리는 서버의 정보는 바뀌지않고(보통 json을 넘겨주는게 그 이유인듯..) 이를 표현하는 방식은 선택할수있는것(프론트에서 알아서 선택해서 보여주겠지)
+    - [redirect, forward 정리](http://jonggs.blogspot.com/2018/11/spring-redirect-forward.html)
+    - ContextLoaderListener
+      - 초기화 이벤트, 종료이벤트때 적절한 동작이 일어나도록해줌 (ex. 종료 이벤트시 자원해제)
+    - WebApplicationInitializer 를 사용하여 web.xml과 xx-servlet.xml 모든 설정을 다 java로 변경할수있음(스프링 3.1 + 서블릿3.0)
+      - [정리굿](https://joont92.github.io/spring/WebApplicationInitializer/)
